--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,1 +1,2 @@
+ko_fi: sabribinmansor # Replace with a single Ko-fi username
 custom: ['https://paypal.me/sabribinmansor'] # Replace with up to 4 custom sponsorship URLs e.g., ['link1', 'link2']
